LFU3 use LinkedList